stage-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: staging
spec:
  rules:
  - host: "webserver-stage.192.168.1.8.nip.io"
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx
            port:
              number: 8080
